# ftevaluator

./: CMakeLists.txt  CONFIG
cmake/: clang.cmake  gcc.cmake  icc.cmake
